--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -12,21 +12,21 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Title<br></div>
-                <div class="intro-lead-in">Date</div>
-                <div class="intro-lead-in">Location</div>
+                <div class="intro-heading">OILFIELD.DIGITAL<br></div>
+                <div class="intro-lead-in"></div>
+                <div class="intro-lead-in"></div>
                 <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
 
     {% include 2017_data/intro.html %}
-    {% include 2017_data/speakers.html %}
+    <!--{% include 2017_data/speakers.html %}-->
     {% include 2017_data/about.html %}
-    {% include 2017_data/sponsors.html %}
+    <!--{% include 2017_data/sponsors.html %}-->
     {% include 2016_data/contact.html %}
     {% include 2016_data/footer.html %}
-    {% include 2017_data/speakers_info.html %}
+    <!--{% include 2017_data/speakers_info.html %}-->
     {% include 2016_data/js.html %}
 
     </body>
