--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -15,7 +15,7 @@
                 <div class="intro-heading">OILFIELD.DIGITAL<br></div>
                 <div class="intro-lead-in"></div>
                 <div class="intro-lead-in"></div>
-                <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#intro" class="page-scroll btn btn-xl">Show Me</a>
             </div>
         </div>
     </header>
