--- a/_includes/2017_data/about.html
+++ b/_includes/2017_data/about.html
@@ -19,23 +19,9 @@
                                     <h4>Theme, Vision, Mission</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Read more about our Theme, Vision, and Mission</p>
+                                    <p class="text-muted">Our Vision</p>
                                 </div>
                                 <a href="/about" class="page-scroll btn btn-sm">Learn More</a>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/icon-agenda.jpeg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Agenda</h4>
-                                </div>
-                                <div class="timeline-heading">
-                                    <p class="text-muted">Check out the agenda</p>
-                                </div>
-                                <a href="/agenda" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
                         </li>
                         <li>
@@ -47,23 +33,9 @@
                                     <h4>Team</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Find out the team members</p>
+                                    <p class="text-muted">Our Team</p>
                                 </div>
                                 <a href="/team" class="page-scroll btn btn-sm">Learn More</a>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="../css/2016_style/img/icon-venue.jpeg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Venue</h4>
-                                </div>
-                                <div class="timeline-heading">
-                                    <p class="text-muted">Learn more about our location</p>
-                                </div>
-                                <a href="/venue" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
                         </li>
                         <li>
@@ -75,7 +47,7 @@
                                     <h4>FAQs</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Have a Question? Many answers can be found right here in our FAQs</p>
+                                    <p class="text-muted">Questions?</p>
                                 </div>
                                 <a href="/faqs" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
