--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">OILFIELD.DIGITAL<br></div>
+                <div class="intro-heading">_oilfield.digital_<br></div>
                 <div class="intro-lead-in"></div>
                 <div class="intro-lead-in"></div>
                 <a href="#intro" class="page-scroll btn btn-xl">Show Me</a>
