--- a/_includes/2017_data/about.html
+++ b/_includes/2017_data/about.html
@@ -19,7 +19,7 @@
                                     <h4>Theme, Vision, Mission</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Our Vision</p>
+                                    <p class="text-muted"></p>
                                 </div>
                                 <a href="/about" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
@@ -33,7 +33,7 @@
                                     <h4>Team</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Our Team</p>
+                                    <p class="text-muted"></p>
                                 </div>
                                 <a href="/team" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
@@ -47,7 +47,7 @@
                                     <h4>FAQs</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">Questions?</p>
+                                    <p class="text-muted"></p>
                                 </div>
                                 <a href="/faqs" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
@@ -61,7 +61,7 @@
                                     <h4>Event Booklet</h4>
                                 </div>
                                 <div class="timeline-heading">
-                                    <p class="text-muted">View or Download our event booklet</p>
+                                    <p class="text-muted"></p>
                                 </div>
                                 <a href="/booklet" class="page-scroll btn btn-sm">Learn More</a>
                             </div>
